--- a/article10.html
+++ b/article10.html
@@ -50,7 +50,8 @@
       </div>
       <div class="article-body col-md-8 offset-md-2">
         <div class="article-lead pb-0">
-          <p>Volt egy levelezésem egy kedves kérdezővel, ami biztos, hogy sokakat érdekelhet. <b>Mi a helyzet azokkal a kapcsolatokkal, ahol az egyik fél többet tesz bele, mint a másik? És ez tartós.</b> 🤔💡</p>
+          <p>Volt egy levelezésem egy kedves kérdezővel, ami biztos, hogy sokakat érdekelhet. <b>Mi a helyzet azokkal a
+              kapcsolatokkal, ahol az egyik fél többet tesz bele, mint a másik? És ez tartós.</b> 🤔💡</p>
           <p>Gyertek, értsünk meg többet. 🙌</p>
           <figure>
             <img src="assets/article10/article-image-1.png" class="img-fluid" alt="article image">
@@ -59,58 +60,108 @@
 
 
         <h2>1. ELTÉRŐ VALÓSÁGOK 🌌</h2>
-        <p>Azokkal a kapcsolatokkal, ahol az energia-befektetés közép vagy hosszú távon nem 50-50% közeli, az a helyzet, hogy benne lenni NAGYON MÁS ÉLMÉNY LESZ az egyik embernek, mint a másiknak. Nem szeretjük kimondani, pedig lehetséges: hogy az egyiknek sokkal jobb lesz, mint a másiknak!</p>
-        <p>Sokan hangsúlyozzák, hogy “mindenkinek megvannak a hibái" és a "kompromisszumokat", de én ezt látom: ahol valaki azt érzi, hogy rengeteget tesz bele és keveset kap vissza, ez majd csak úgy egy reggel megváltozik? Nem.</p>
-        <p>HA a kapcsolatban nem történnek KONKRÉT változások, ennek az embernek ez az érzése nem fog megváltozni. Ahogy telik az idő, azt fogja megélni, hogy egyre többet és többet és többet tett bele - ÉS tartósan kevesebbet kapott vissza. Az idővel előre az energiái, lendülete, lelkesedése és pozitív érzelmei mind-mind FOGYNI fognak, hiszen azt látja, hogy tartósan mínuszos az egyenlege!</p>
-        <p>Nagyon fontos, hogy ez TELJESEN független attól, hogy a partnere vagy más emberek mit fognak gondolni ugyanerről a kapcsolatról. <b>Amíg egy ember így látja a saját helyzetét, addig az ő érzései ezt fogják tükrözni!</b></p>
+        <p>Azokkal a kapcsolatokkal, ahol az energia-befektetés közép vagy hosszú távon nem 50-50% közeli, az a helyzet,
+          hogy benne lenni NAGYON MÁS ÉLMÉNY LESZ az egyik embernek, mint a másiknak. Nem szeretjük kimondani, pedig
+          lehetséges: hogy az egyiknek sokkal jobb lesz, mint a másiknak!</p>
+        <p>Sokan hangsúlyozzák, hogy “mindenkinek megvannak a hibái" és a "kompromisszumokat", de én ezt látom: ahol
+          valaki azt érzi, hogy rengeteget tesz bele és keveset kap vissza, ez majd csak úgy egy reggel megváltozik?
+          Nem.</p>
+        <p>HA a kapcsolatban nem történnek KONKRÉT változások, ennek az embernek ez az érzése nem fog megváltozni. Ahogy
+          telik az idő, azt fogja megélni, hogy egyre többet és többet és többet tett bele - ÉS tartósan kevesebbet
+          kapott vissza. Az idővel előre az energiái, lendülete, lelkesedése és pozitív érzelmei mind-mind FOGYNI
+          fognak, hiszen azt látja, hogy tartósan mínuszos az egyenlege!</p>
+        <p>Nagyon fontos, hogy ez TELJESEN független attól, hogy a partnere vagy más emberek mit fognak gondolni
+          ugyanerről a kapcsolatról. <b>Amíg egy ember így látja a saját helyzetét, addig az ő érzései ezt fogják
+            tükrözni!</b></p>
 
 
         <h2>2. LÁTJA EGYÁLTALÁN? 👀</h2>
-        <p>Külön kiemelném, mert az ilyen felállásoknál rengeteget ronthat a helyzeten... hogy miközben az egyik úgy érzi, hogy 70%-ot tesz bele, leggyakrabban a másik abszolút nem. Ő is úgy érzi, hogy "rengeteget alkalmazkodik", hogy "minden a Te igényeid szerint történik", és neki is megvan a kis listája, amikor ő tett nagy dolgokat a másikért. 🤔</p>
-        <p>Kulcskérdés, hogy a másik fél HOGYAN látja a helyzetet. Van, hogy a másik is érzi és látja, hogy a párja többet rak bele, csak xy okok miatt ő maga többre most nem képes (például egy betegség miatt, egy lelki mélypont miatt, egy nehéz munka miatt, a tanulás miatt stb.).</p>
+        <p>Külön kiemelném, mert az ilyen felállásoknál rengeteget ronthat a helyzeten... hogy miközben az egyik úgy
+          érzi, hogy 70%-ot tesz bele, leggyakrabban a másik abszolút nem. Ő is úgy érzi, hogy "rengeteget
+          alkalmazkodik", hogy "minden a Te igényeid szerint történik", és neki is megvan a kis listája, amikor ő tett
+          nagy dolgokat a másikért. 🤔</p>
+        <p>Kulcskérdés, hogy a másik fél HOGYAN látja a helyzetet. Van, hogy a másik is érzi és látja, hogy a párja
+          többet rak bele, csak xy okok miatt ő maga többre most nem képes (például egy betegség miatt, egy lelki
+          mélypont miatt, egy nehéz munka miatt, a tanulás miatt stb.).</p>
         <div class="divider gutter">
-          <p>Ha a másik fél TÉNYLEG TELJESEN MÁSHOGY látja a fennálló energia-arányt, akkor az komolyan "tetézi a bajt". Az azt jelenti arra az emberre nézve, aki 70%-ot hoz izomból éppen ⏩ hogy ráadásul a partnerének ez még nem is látszik! Sem hála, sem elismerés, sem a puszta öröm a másiknál, hogy kap valami értékeset, nem fog így megtörténni!</p>
-          <p class="mb-0"><b>A beletett sok-sok energia nagyon kevés termést hoz... és ami a legfájóbb, hogy az értékét sem ismerik el. 💔 Ha valami biztos, akkor az az, hogy a beletett energiája senkinek sem ezt érdemli, nem igaz?</b></p>
+          <p>Ha a másik fél TÉNYLEG TELJESEN MÁSHOGY látja a fennálló energia-arányt, akkor az komolyan "tetézi a bajt".
+            Az azt jelenti arra az emberre nézve, aki 70%-ot hoz izomból éppen ⏩ hogy ráadásul a partnerének ez még nem
+            is látszik! Sem hála, sem elismerés, sem a puszta öröm a másiknál, hogy kap valami értékeset, nem fog így
+            megtörténni!</p>
+          <p class="mb-0"><b>A beletett sok-sok energia nagyon kevés termést hoz... és ami a legfájóbb, hogy az értékét
+              sem ismerik el. 💔 Ha valami biztos, akkor az az, hogy a beletett energiája senkinek sem ezt érdemli, nem
+              igaz?</b></p>
         </div>
-        <p>Párkapcsolatokban minden megtörténik, ami megtörténhet, így előfordul, hogy mindketten ugyanazt érezzük: csak teszünk, teszünk, de alig kapunk. Ez esetben mindketten a következő két pont felé fogunk robogni. 👇</p>
+        <p>Párkapcsolatokban minden megtörténik, ami megtörténhet, így előfordul, hogy mindketten ugyanazt érezzük: csak
+          teszünk, teszünk, de alig kapunk. Ez esetben mindketten a következő két pont felé fogunk robogni. 👇</p>
 
 
         <h2>3. A) OPCIÓ: KIÉGÉS TÖRÉSPONTIG ⚡</h2>
-        <p>Ha valahol azt érzem, hogy nem kapom azt, amire vágyom (annyit, olyat, mennyiség & minőség is szempont), ott garantált, hogy elkezdek érzelmileg kiégni. Ez egy munkahelyre ugyanúgy igaz, mint bármilyen emberi kapcsolatra. </p>
-        <p class="divider"><b>A kiégés egy érzelmi folyamat. Tartósan egyre többet teszek bele valamibe, ami nem ad elég jót vissza, ezért egyre-egyre növekszenek a negatív érzéseim.</b> Vagyis ROMLIK a helyzetem. Nem stagnál, romlik. Egyre rosszabbul érint, amiben vagyok - általában egészen egy töréspontig, amikor kiborulok / kilépek / összeomlok, azaz menthetetlenül valami VÁLTOZÁS történik (végre).</p>
-        <p>🤔 Ezért szoktuk az ilyen töréspontokon néha azt érezni, hogy <i>“hm... ez most nagyon sz*r, de valahol mélyen mégis tudom, hogy legalább végre elmozdulok abból, amiben olyan régóta aszalódtam!”</i></p>
+        <p>Ha valahol azt érzem, hogy nem kapom azt, amire vágyom (annyit, olyat, mennyiség & minőség is szempont), ott
+          garantált, hogy elkezdek érzelmileg kiégni. Ez egy munkahelyre ugyanúgy igaz, mint bármilyen emberi
+          kapcsolatra. </p>
+        <p class="divider"><b>A kiégés egy érzelmi folyamat. Tartósan egyre többet teszek bele valamibe, ami nem ad elég
+            jót vissza, ezért egyre-egyre növekszenek a negatív érzéseim.</b> Vagyis ROMLIK a helyzetem. Nem stagnál,
+          romlik. Egyre rosszabbul érint, amiben vagyok - általában egészen egy töréspontig, amikor kiborulok / kilépek
+          / összeomlok, azaz menthetetlenül valami VÁLTOZÁS történik (végre).</p>
+        <p>🤔 Ezért szoktuk az ilyen töréspontokon néha azt érezni, hogy <i>“hm... ez most nagyon sz*r, de valahol
+            mélyen mégis tudom, hogy legalább végre elmozdulok abból, amiben olyan régóta aszalódtam!”</i></p>
 
 
         <h2>4. B) OPCIÓ: ÍGY MARADUNK 🥀</h2>
-        <p>Ha nincsen töréspont és fennmarad a kapcsolat az érzelmi balansz változása nélkül, akkor az sajnos azt jelenti, hogy az egyik fél vagy mindketten egy olyan dologban élnek tartósan, ahol <b>egyre mínuszosabb az életük.</b> Egyre negatívabb, amijük van, egyre negatívabb élményre mondanak igent nap mint nap. Amikor visszatekintenek, azt fogják látni, hogy jóval mínuszosabb évtizedeik voltak, mint szerették volna…</p>
-        <p>🔥 <b>Szerintem ezért nem érdemes kiegyezni a hiányérzettel. Minden változtatás kockázata kisebb kockázat, mint ez. Amikor azt érezzük, hogy többet teszünk bele, mint amennyit visszakapunk, vagy töréspont lesz a vége, vagy a tartós hiányérzet.</b> Ha bevállaljuk a nehéz beszélgetések és a nehéz döntések kockázatát, megdöbbentő változások tudnak megtörténni, akár egy adott kapcsolaton belül!</p>
+        <p>Ha nincsen töréspont és fennmarad a kapcsolat az érzelmi balansz változása nélkül, akkor az sajnos azt
+          jelenti, hogy az egyik fél vagy mindketten egy olyan dologban élnek tartósan, ahol <b>egyre mínuszosabb az
+            életük.</b> Egyre negatívabb, amijük van, egyre negatívabb élményre mondanak igent nap mint nap. Amikor
+          visszatekintenek, azt fogják látni, hogy jóval mínuszosabb évtizedeik voltak, mint szerették volna…</p>
+        <p>🔥 <b>Szerintem ezért nem érdemes kiegyezni a hiányérzettel. Minden változtatás kockázata kisebb kockázat,
+            mint ez. Amikor azt érezzük, hogy többet teszünk bele, mint amennyit visszakapunk, vagy töréspont lesz a
+            vége, vagy a tartós hiányérzet.</b> Ha bevállaljuk a nehéz beszélgetések és a nehéz döntések kockázatát,
+          megdöbbentő változások tudnak megtörténni, akár egy adott kapcsolaton belül!</p>
         <figure class="pt-0">
           <img src="assets/article10/article-image-2.png" class="img-fluid" alt="article image">
         </figure>
 
         <h2>5. AMIÉRT BENNE VAGY 👁️</h2>
-        <p>Az ilyen felállásoknál a "sokkal többet beletevő" személy, ugye, többet tesz bele, mint a másik. Teszi ezt kitartóan, nap nap után, és oly módon, ami MEGENGEDI a másiknak, hogy figyelmen kívül hagyhassa az értékét és a súlyát annak az energiának, odafigyelésnek, amit kap. Nincsenek negatív következményei.</p>
-        <p>Vajon mi tart minket ilyen szerepben? Ez a jövőre nézve kulcs, hiszen azt szeretnénk, hogy majd MÁSMILYEN kapcsolatokban találjuk magunkat, akár ez a kapcsolat változik meg, akár egy új kapcsolat lesz már más. A MIND GAME előtt, amit erre a célra hozok Nektek, általános jelenség, hogy <b>van bennünk egy hang (van egy részünk), aki eleve megkérdőjelezi a rossz érzéseink létjogosultságát.</b></p>
-        <p class="mb-0"><i>Jogos az elégedetlenségem?</i></p>
-        <p class="mb-0"><i>Jogos a hiányérzetem?</i></p>
-        <p class="mb-0"><i>Vagy én vágyom túl sokra?</i></p>
-        <p class="mb-0"><i>És mi van, ha rosszul látom a helyzetet?</i></p>
-        <p><i>Ha nem is igaz, hogy többet teszek bele?</i></p>
-        <p>Azaz megkérdőjelezzük önmagunkat. Ez azért egy mély gödör, mert SOHA, SOHA nem fogunk tudni "objektív képpel" rendelkezni a kapcsolatunkról. <b>Mindig egy ember véleménye lesz egy másik emberrel szemben.</b> A környezetben lesz, aki velem ért egyet, lesz, aki veled. Valószínű attól függően, hogy kivel beszéltek többet.</p>
-        <p class="divider mb-0">Rengeteget időztem ilyen gödrökben és csak egyetlen kijáratot találtam belőlük: <b>MEGVÁLTOZNAK-E AZ ÉRZÉSEIM AKKOR, AMIKOR FONTOLÓRA VESZEM AZT IS, HOGY TÉVEDEK?</b> Ezt ki lehet próbálni. Ha érzem, hogy IGEN, akkor szuper. Akkor érdemes ebbe az irányba menni: mit vegyek MÉG észre, amit kapok a másiktól? Milyen értékek vannak MÉG ebben a kapcsolatban, amiket nem vettem eddig eléggé figyelembe? De ha NEM... ha újra és újra ott kötök ki, hogy hiányérzetem van, bárki bármit mond, akkor csak egy út van, ahol a hiányérzetem elmúlhat. <b>Ez az az út lesz, ahol KOMOLYAN VESZEM, AMIT ÉRZEK.</b></p>
+        <p>Az ilyen felállásoknál a "sokkal többet beletevő" személy, ugye, többet tesz bele, mint a másik. Teszi ezt
+          kitartóan, nap nap után, és oly módon, ami MEGENGEDI a másiknak, hogy figyelmen kívül hagyhassa az értékét és
+          a súlyát annak az energiának, odafigyelésnek, amit kap. Nincsenek negatív következményei.</p>
+        <p>Vajon mi tart minket ilyen szerepben? Ez a jövőre nézve kulcs, hiszen azt szeretnénk, hogy majd MÁSMILYEN
+          kapcsolatokban találjuk magunkat, akár ez a kapcsolat változik meg, akár egy új kapcsolat lesz már más. A MIND
+          GAME előtt, amit erre a célra hozok Nektek, általános jelenség, hogy <b>van bennünk egy hang (van egy
+            részünk), aki eleve megkérdőjelezi a rossz érzéseink létjogosultságát.</b></p>
+        <ul class="gutter">
+          <li><i>Jogos az elégedetlenségem?</i></li>
+          <li><i>Jogos a hiányérzetem?</i></li>
+          <li><i>Vagy én vágyom túl sokra?</i></li>
+          <li><i>És mi van, ha rosszul látom a helyzetet?</i></li>
+          <li><i>Ha nem is igaz, hogy többet teszek bele?</i></li>
+        </ul>
+        <p>Azaz megkérdőjelezzük önmagunkat. Ez azért egy mély gödör, mert SOHA, SOHA nem fogunk tudni "objektív képpel"
+          rendelkezni a kapcsolatunkról. <b>Mindig egy ember véleménye lesz egy másik emberrel szemben.</b> A
+          környezetben lesz, aki velem ért egyet, lesz, aki veled. Valószínű attól függően, hogy kivel beszéltek többet.
+        </p>
+        <p class="divider mb-0">Rengeteget időztem ilyen gödrökben és csak egyetlen kijáratot találtam belőlük:
+          <b>MEGVÁLTOZNAK-E AZ ÉRZÉSEIM AKKOR, AMIKOR FONTOLÓRA VESZEM AZT IS, HOGY TÉVEDEK?</b> Ezt ki lehet próbálni.
+          Ha érzem, hogy IGEN, akkor szuper. Akkor érdemes ebbe az irányba menni: mit vegyek MÉG észre, amit kapok a
+          másiktól? Milyen értékek vannak MÉG ebben a kapcsolatban, amiket nem vettem eddig eléggé figyelembe? De ha
+          NEM... ha újra és újra ott kötök ki, hogy hiányérzetem van, bárki bármit mond, akkor csak egy út van, ahol a
+          hiányérzetem elmúlhat. <b>Ez az az út lesz, ahol KOMOLYAN VESZEM, AMIT ÉRZEK.</b></p>
 
 
         <h2>6. TANULSÁG SZÜRET 💡🍇</h2>
-        <p>Hát íme jó pár kérdés, amivel egy ilyen helyzetből le tudjátok szüretelni azokat a tanulságokat, amikkel fontos továbbmennetek. Akár ebben a kapcsolatban, akár egy következőben.</p>
+        <p>Hát íme jó pár kérdés, amivel egy ilyen helyzetből le tudjátok szüretelni azokat a tanulságokat, amikkel
+          fontos továbbmennetek. Akár ebben a kapcsolatban, akár egy következőben.</p>
         <p>👁️ <b>Mivel, hogyan járultam én hozzá, hogy egy ilyen kapcsolatban találhassam magam? 🔥</b></p>
-        <p>SZABÁLY: itt sem önhibáztatásról, sem a másik fél felmentéséről nincsen szó. Csak arról van, hogy ahhoz, hogy másmilyen legyen a jövőm, hadd lássam, mit tudok én másként csinálni!</p>
+        <p>SZABÁLY: itt sem önhibáztatásról, sem a másik fél felmentéséről nincsen szó. Csak arról van, hogy ahhoz, hogy
+          másmilyen legyen a jövőm, hadd lássam, mit tudok én másként csinálni!</p>
         <ul class="gutter">
           <li>- Mik azok az intő jelek, amiket mostantól komolyan veszek?</li>
           <li>- Mik azok a dolgok, amikben nem köthetek kompromisszumot, ha jól akarom érezni magam én is?</li>
           <li>- Mit fogok tenni kompromisszumok helyett mostantól?</li>
           <li>- Mit fogok tenni akkor, ha azt látom, hogy nem azt kapom, amit szeretnék?</li>
           <li>- Még miben, hogyan használom mostantól a saját energiámat másként?</li>
-          <li>- És ha esetleg egy új kapcsolat lesz a dologból: milyen karakterű emberek illenek még jobban hozzám az alapján, amit itt ebben a kapcsolatban megtapasztaltam magamról?</li>
+          <li>- És ha esetleg egy új kapcsolat lesz a dologból: milyen karakterű emberek illenek még jobban hozzám az
+            alapján, amit itt ebben a kapcsolatban megtapasztaltam magamról?</li>
         </ul>
         <p><b>👁️ Mit kell tudnom még a jövőmhöz? 🔥</b></p>
         <ul class="gutter">
@@ -119,11 +170,19 @@
           <li>- Mi az, ami e helyett nagyon-nagyon jó lenne nekem?</li>
           <li>- Miről nem tudok lemondani ahhoz, hogy igazán jól tudjam érezni magam az életemben?</li>
           <li>- Hogyan képzelek el egy igazán jó kapcsolatot most, mivel gazdagodott ennek a képe bennem?</li>
-          <li>- Mi az a mentalitás és mik azok a készségek, amire a partneremtől szükségem van és lesz ahhoz, hogy egy ilyen kapcsolat jöhessen létre az életemben?</li>
+          <li>- Mi az a mentalitás és mik azok a készségek, amire a partneremtől szükségem van és lesz ahhoz, hogy egy
+            ilyen kapcsolat jöhessen létre az életemben?</li>
         </ul>
 
         <div class="article-footer">
-          <p>Bármikor, amikor magadról gondolkozol életedben, felmerülhet benned az érzés, hogy jó lenne még jobban megismerni önmagad, akár olyan segítséggel, aki ehhez ért. AMIKOR ilyet érzel, annak mindig érdemes utána menni. Az önismeret is egy nagy téma, amiről fogok külön beszélni, de a lényeg most ez: amikor NINCS benned ilyen érzés, akkor nyugodtan BÍZZ MEG ebben. Olyankor "csak" azokra a tanulságokra van szükséged, amit egyedül elő tudsz csalogatni a saját fejedből, saját szívedből. <b>Bízhatsz abban, hogy érezni fogod, amikor mélyebbre akarsz menni.</b> Lesz hozzá kíváncsiságod, belső motivációd, és megkönnyebülést fog jelenteni, nem kényszert és kellemetlenséget. Az életünk úgyis tanít mindannyiunkat és a tanítás a kapcsolatainkon keresztül érkezik.</p>
+          <p>Bármikor, amikor magadról gondolkozol életedben, felmerülhet benned az érzés, hogy jó lenne még jobban
+            megismerni önmagad, akár olyan segítséggel, aki ehhez ért. AMIKOR ilyet érzel, annak mindig érdemes utána
+            menni. Az önismeret is egy nagy téma, amiről fogok külön beszélni, de a lényeg most ez: amikor NINCS benned
+            ilyen érzés, akkor nyugodtan BÍZZ MEG ebben. Olyankor "csak" azokra a tanulságokra van szükséged, amit
+            egyedül elő tudsz csalogatni a saját fejedből, saját szívedből. <b>Bízhatsz abban, hogy érezni fogod, amikor
+              mélyebbre akarsz menni.</b> Lesz hozzá kíváncsiságod, belső motivációd, és megkönnyebülést fog jelenteni,
+            nem kényszert és kellemetlenséget. Az életünk úgyis tanít mindannyiunkat és a tanítás a kapcsolatainkon
+            keresztül érkezik.</p>
           <p class="mb-0">👁️ MESI.LIFE 🔥</p>
         </div>
       </div>
