--- a/article11.html
+++ b/article11.html
@@ -45,7 +45,7 @@
   <article class="container">
     <div class="row">
       <div class="article-header col-md-8 offset-md-2">
-        <h1 class="article-title"><span>q&a</span> Elfogadni a Jót.</h1>
+        <h1 class="article-title"><span>q&a.</span> Elfogadni a Jót.</h1>
         <h2 class="article-subtitle">#új #párkapcsolat #félelmek #múlt #jövő #szeretet</h2>
       </div>
       <div class="article-body col-md-8 offset-md-2">
@@ -54,7 +54,7 @@
         </figure>
         <div class="article-lead pb-0">
           <p>Mire a felnőtt párkapcsolatainkba kerülünk, már mindenkinek vannak rossz tapasztalatai. Vagy gyerekkorból,
-            vagy felnőttkorból, de vannak. Kaptam egy kérdést, amit azért érzem nagyon fontosnak, mert itt a lényeg ez:
+            vagy felnőttkorból, de vannak. Kaptam egy kérdést, amit azért érzek nagyon fontosnak, mert itt a lényeg ez:
             HOGYAN navigáljuk a múltunk negatív lenyomatait? <b>Hogyan NE vessen árnyékot a jelenre és a jövőnkre?</b>
           </p>
           <p>Most elsősorban az új kapcsolatokra fókuszálok. Egy jó kapcsolat eleje ugyanis nagyon értékes, gazdag
@@ -71,7 +71,8 @@
         <p>👁️ Az a jó viselkedés / bánásmód, amit ettől a másik embertől kapsz, konkrétan jó ÉRZÉST ad Neked, vagy
           pont, hogy azt érzed, hogy jó érzést KELLENE adjon, de nem érzed?</p>
         <p>👁️ Ha konkrétan jó érzést ad, amit a másiktól kapsz: <b>akkor most képzeld el, hogy 100%-ig TUDOD, hogy ez
-            örökre a Tiéd, így marad, megtarthatod, kész.</b> ⏩ Így is nehéznek találnád, hogy megéld ezeket a jó
+            örökre a Tiéd, így marad, megtarthatod, kész.</b> ⏩ Így is nehéznek találnád, hogy elfogadd / elhidd ezeket
+          a jó
           dolgokat teljesen?</p>
         <p>🤔🤔🤔</p>
         <p>Amikor nehéznek érezzük, hogy elfogadjunk Jó dolgokat, valójában 2 helyzet lehetséges.</p>
@@ -92,7 +93,8 @@
           pont, aki letette a voksát mellette és ez szent. És egy új, jól induló kapcsolat elején veszi észre, hogy a
           sok rossz tapasztalat képes rávetülni a jelenre. Igazából helyesen érzi, hogy szeretne aktívan tenni érte,
           hogy a múlt ne kezdje el befolyásolni a jövőjüket! 👍</p>
-        <p class="divider mb-0">Amikor jó dolgokat érzünk nehéznek, akkor azok vagy nem is olyan jók, nekünk személy szerint,
+        <p class="divider mb-0">Amikor jó dolgokat érzünk nehéznek, akkor azok vagy nem is olyan jók, nekünk személy
+          szerint,
           hiába próbálják ránk beszélni (akár mi magunkra) - VAGY tényleg jó a jó, ÉS az a Félelem jelent meg, ami a
           negatív tapasztalatainkból érkezik.</p>
 
@@ -114,7 +116,8 @@
             családjának a tapasztalatai határozzák meg. Hogy miben hittek és miben nem.</b></p>
         <p>És ez igaz lesz MINDENKIRE, hiszen lehetetlen, hogy a tapasztalatai NE határozzanak meg egy embert. Igaz
           egészen addig a pillanatig - <b>amíg egy ember az önfejlesztés útjára nem lép.</b> 👁️🔥</p>
-        <p class="divider mb-0">Lehetetlen, hogy a múltunk, vagyis a korábbi tapasztalataink ne érkezzenek meg velünk egy új
+        <p class="divider mb-0">Lehetetlen, hogy a múltunk, vagyis a korábbi tapasztalataink ne érkezzenek meg velünk
+          egy új
           kapcsolatba. Ha a menhelyről hazaviszek egy kutyát, akit bántottak, nem várom tőle, hogy NE úgy viselkedjen,
           mint akivel ez történt. Nem. Azt várom tőle, hogy majd az új, JÓ tapasztalatai velem szépen lassan
           megnyugtatják és megtanítják bízni…</p>
@@ -162,8 +165,9 @@
           önfejlesztés tapasztalatából érkeztem meg erre a véleményre. VAN az a szint, amikor egy embernek ez már megy
           egyedül is, de az a szint csak rengeteg önismeret ÉS meditációs tapasztalat után jön el. Addig a másik tuti,
           hogy <i>érezni fogja rajtad, hogy valami van</i>… és ahhoz, hogy benne se induljanak el az ő félelmei, ezt
-          tisztázni kell.</p>
-        <div class="divider">
+          tisztázni kell.
+        </p>
+        <div class="divider gutter">
           <p>💡 Hogyan csináld ezt a necces beszélgetést?</p>
           <p>⏩ 1. Amikor már kijöttél az erős negatív érzésekből, azaz tisztának érzed a fejed és korrekt a hangulatod,
             akkor állsz készen a beszélgetésre. Teremts nyugodt körülményeket, de cseppet se halogasd: a legelső
@@ -181,23 +185,24 @@
               href="https://lifetracker.hu/mesi.life/8-joban-rosszban.html" target="_blank">Jóban-ROSSZBAN</a> c.
             cikkemben olvashatsz. Úgyhogy érdemes!!!!</p>
         </div>
+        <figure class="pt-0">
+          <img src="assets/article11/article-image-3.png" class="img-fluid" alt="article image">
+        </figure>
 
 
         <h2>5. AMIT TUDNOD KELL A PÁROD ROSSZ OLDALÁRÓL 👇👇👇</h2>
         <p>Mindenkinek van múltja és mindenkinek vannak félelmei a múltja alapján. ÉS ez elkerülhetetlen. De mi
           elkerülhetetlen egész pontosan? Attól szoktunk félni, ugye, hogy majd előjönnek a másik rossz dolgai és
           előbb-utóbb rosszul is fog bánni velünk és nekünk ezt el kell fogadni...</p>
-        <div class="divider gutter">
-          <p>A radikálisan új szemlélet, amiben én hiszek, az ez:</p>
-          <p><b>Idővel elkerülhetetlenül előjönnek egy másik ember FÉLELMEI.</b> Nem ezt várni, pont olyan, mint egy
-            állattól, aki már kapott rúgásokat, várni a feltétlen bizalmat.</p>
-          <p><b>Ezek azok a pontok, ahol meg kell mutatnunk, hogy MI MÁR BIZTONSÁGOSAK VAGYUNK EGYMÁSNAK.</b> És ha ez
-            sikerül - akkor azokkal a “rossz dolgokkal” nekünk SOHA nem kell együtt élni!</p>
-          <p class="mb-0"><b>MINDEN ROSSZ VISELKEDÉSÜNKET A FÉLELEM SZÜLI. Ha érzelmileg biztonságban tudjuk tartani
-              egymást, akkor megszűnik a félelem és megszűnnek a “rossz dolgok”.</b> Ennek a “hogyanját” viszont soha
-            nem én fogom eldönteni valaki másról. Hogy kinek mire van szüksége ilyen téren, azt mindenkinek a saját
-            világa, a saját érzései fogják diktálni. Én megismerni tudom ezeket.</p>
-        </div>
+        <p>A radikálisan új szemlélet, amiben én hiszek, az ez:</p>
+        <p><b>Idővel elkerülhetetlenül előjönnek egy másik ember FÉLELMEI.</b> Nem ezt várni, pont olyan, mint egy
+          állattól, aki már kapott rúgásokat, várni a feltétlen bizalmat.</p>
+        <p><b>Ezek azok a pontok, ahol meg kell mutatnunk, hogy MI MÁR BIZTONSÁGOSAK VAGYUNK EGYMÁSNAK.</b> És ha ez
+          sikerül - akkor azokkal a “rossz dolgokkal” nekünk SOHA nem kell együtt élni!</p>
+        <p><b>MINDEN ROSSZ VISELKEDÉSÜNKET A FÉLELEM SZÜLI. Ha érzelmileg biztonságban tudjuk tartani
+            egymást, akkor megszűnik a félelem és megszűnnek a “rossz dolgok”.</b> Ennek a “hogyanját” viszont soha
+          nem én fogom eldönteni valaki másról. Hogy kinek mire van szüksége ilyen téren, azt mindenkinek a saját
+          világa, a saját érzései fogják diktálni. Én megismerni tudom ezeket.</p>
         <div class="divider gutter">
           <p>💡 Amikor negatív viselkedést látsz a másikon, ezeket a válaszokat keresd:</p>
           <ul>
@@ -240,6 +245,9 @@
             target="_blank">Q&A. Utálnom kéne!</a> illetve <a
             href="https://lifetracker.hu/mesi.life/6-rozsaszin-kod.html" target="_blank">RÓZSASZÍN KÖD. Mi az?</a> c.
           írásaimban.</p>
+        <figure class="pt-0">
+          <img src="assets/article11/article-image-4.png" class="img-fluid" alt="article image">
+        </figure>
 
 
         <h2>7. ÖRÜLJ ÉS ADD VISSZA! 🌈🌈🌈</h2>
@@ -250,9 +258,9 @@
           belső oldalára, mintha ott fogadnád be ezt az energiát. Képzeld el, ahogy átlélegzed a tested minden sejtjén
           ezt az érzést.</p>
         <p>Fejezd is ki a háládat azért a jóért, amiben most részed van! Egész nyugodtan légy hálás érte, mert az egy
-          olyan érzés, ami Neked is csak még többet fog adni. (VIGYÁZAT: az “ezért tartozom a másiknak”, “ezt vissza
-          kell adnom valahogy” érzései NEM a hálához tartoznak. Ezek is a múltunkból érkező félelmek. Ebbe sem megyek
-          már bele, mert kifolyik a szemetek.)</p>
+          olyan érzés, ami Neked is csak még többet fog adni. (VIGYÁZAT: az “ezért tartozom a másiknak”, “ezt
+          viszonoznom kell valahogy” érzései NEM a hálához tartoznak. Ezek is a múltunkból érkező félelmek. Ebbe nem
+          megyek már bele, mert kifolyik a szemetek.)</p>
         <div class="divider gutter">
           <p>💡💗 ÉS AMI A LÉNYEG:</p>
           <ul class="mb-0">
