--- a/article11.html
+++ b/article11.html
@@ -185,7 +185,7 @@
               href="https://lifetracker.hu/mesi.life/8-joban-rosszban.html" target="_blank">Jóban-ROSSZBAN</a> c.
             cikkemben olvashatsz. Úgyhogy érdemes!!!!</p>
         </div>
-        <figure class="pt-0">
+        <figure>
           <img src="assets/article11/article-image-3.png" class="img-fluid" alt="article image">
         </figure>
 
