--- a/article11.html
+++ b/article11.html
@@ -192,7 +192,7 @@
 
         <h2>5. AMIT TUDNOD KELL A PÁROD ROSSZ OLDALÁRÓL 👇👇👇</h2>
         <p>Mindenkinek van múltja és mindenkinek vannak félelmei a múltja alapján. ÉS ez elkerülhetetlen. De mi
-          elkerülhetetlen egész pontosan? Attól szoktunk félni, ugye, hogy majd előjönnek a másik rossz dolgai és
+          elkerülhetetlen egész pontosan? Attól szoktunk félni, ugye, hogy majd előjönnek a másik "rossz dolgai" és
           előbb-utóbb rosszul is fog bánni velünk és nekünk ezt el kell fogadni...</p>
         <p>A radikálisan új szemlélet, amiben én hiszek, az ez:</p>
         <p><b>Idővel elkerülhetetlenül előjönnek egy másik ember FÉLELMEI.</b> Nem ezt várni, pont olyan, mint egy
