--- a/article12.html
+++ b/article12.html
@@ -101,7 +101,7 @@
         </figure>
 
 
-        <h2>3. AMI NEM BIZTOS, HOGY "NORMÁLIS" ☝</h2>
+        <h2>3. AMI NEM BIZTOS, HOGY "NORMÁLIS" ☝️</h2>
         <p class="mb-0">Nagyon sokan élnek úgy, hogy csak a hétvégéken és az éves szabadságuk alatt keresik azt, hogy
           ÉLVEZZÉK AZ ÉLETET. A mindennapi életet rengeteg más célnak szokás alárendelni. Talán ez egy toplista a mi
           kultúránkban:</p>
