--- a/article14.html
+++ b/article14.html
@@ -79,7 +79,8 @@
           <li>"Az élet nem arról szól, hogy jó legyen neked."</li>
           <li>"Az élet nem igazságos." stb.</li>
         </ul>
-        <p>Ezeket biztos, hogy mindenki hallotta. Világos, hogy a boldogság definíciójában nincs egyetértés, de ugye az
+        <p>Ezeket biztos, hogy mindenki hallotta. Világos, hogy a boldogság definíciójában vagy jelentőségében nincs
+          egyetértés, de ugye az
           ma semmiben sincs. Valami koncepcióra viszont mégis szükségünk lesz… ezért szeretném most ezt a kérdést
           leegyszerűsíteni arra az egyetlen egy tényezőre, AMI NÉLKÜL LEHETETLEN lenne értelmezni a boldogságot: az öröm
           állapota. Hogy olyankor jól érzed magad. Ha egy ember rosszul érzi magát, azt tuti nem nevezhetjük épp
@@ -95,8 +96,7 @@
         </div>
         <p><b>Az egyetlen dolog, amiben a boldogság kapcsán meg tudunk egyezni, az az, hogy olyankor JÓL ÉREZZÜK
             MAGUNKAT. Minden más nagymértékben egyedi lesz.</b> Hogy ki mikor és mitől lesz boldog - pontosan annyira
-          egyedi lesz, amennyire egyedi az, hogy ki miben érzi jól magát. (Persze lesznek itt általános érvényű dolgok
-          is, mert van, amiben senki sem érzi jól magát, mint például egy megaláztatás.)</p>
+          egyedi lesz, amennyire egyedi az, hogy ki miben érzi jól magát.</p>
         <p>“Az életünk célja a boldogság.” Még ezzel sem ért mindenki egyet. Bár a boldogságot nagy tömegek tekintik ma
           az életük céljának. DE ha azt mondjuk, hogy mindenki szeretne boldog lenni, HA választhat - akkor azzal
           valószínűleg az emberek 99%-a egyet fog már érteni. Mondhatjuk, hogy a boldogság senkinek sem jönne rosszul.
@@ -127,8 +127,8 @@
 
         <h2>3. A LEGNEHEZEBB FELADAT 💪</h2>
         <p>Arra már biztosan mindenki rájött, hogy ha az igazán boldog élet egy könnyű feladat lenne, akkor ma nem olyan
-          arcokat látnánk magunk körül tömegesen, amilyeneket. Ma mind alig ismerünk olyan embereket, akik igazán,
-          kicsattanóan, sugárzóan jól érzik magukat az életükben. 🤔</p>
+          arcokat látnánk magunk körül tömegesen, amilyeneket. Ma mind alig ismerünk olyan embereket, akik
+          szenvedélyesen, kicsattanóan, sugárzóan jól érzik magukat az életükben. 🤔</p>
         <p>Képzeljük el, hogy van egy eszközünk, amivel folyamatosan mérni tudjuk, hogy hogy is érezzük magunkat az
           életünkben. Azt is látjuk vele, hogy az életünk különböző elemei - emberek, események, tevékenységek, dolgok -
           milyen hatással vannak ránk nap mint nap. Vajon mit mutatnának az adatok? Nekem van két tippem.</p>
@@ -162,8 +162,8 @@
           időszakról-időszakra, hogy mi igazán fontos nekünk, mit tudunk elengedni jó szívvel és mit nem. DE azokban a
           vágyakban, amiket NEM tudunk hiányérzet nélkül elengedni - ha megpróbálunk kompromisszumot kötni, akkor az
           életélményünk színvonalában kötöttünk kompromisszumot! 🔥🔥🔥</p>
-        <p>Ez valahol még evidensnek is tűnik. Hát nem MINDENKI PONT AZON VAN, HOGY EZT CSINÁLJA? Hogy jól valóra váltsa
-          minél több vágyát? Csak sajnos az élet egy olyan hely, ami nem annyira egyszerű, hogy ez csak így
+        <p>Ez valahol még evidensnek is tűnik. Hát nem MINDENKI PONT AZON VAN, hogy jól valóra váltsa minél több vágyát?
+          Csak sajnos az élet egy olyan hely, ami nem annyira egyszerű, hogy ez csak így
           megtörténjen? 🤔 Hmmm...</p>
 
 
@@ -178,8 +178,8 @@
             legyen”, anélkül is jól kéne tudjuk érezni magunkat...</p>
           <p><b>2. Ha foglalkozunk is a vágyainkkal, tele vagyunk MENTÁLIS & ÉRZELMI GÁTAKKAL. 👇</b></p>
           <p>“Amit igazán szeretnék, az lehetetlen. Vagy ha nem lehetetlen, akkor én vagyok kevés hozzá.” Ami a
-            fejünkben van, például az ilyen gondolatok, aktívan akadályozza azt, hogy egyáltalán elkezdjünk a vágyainkon
-            dolgozni.</p>
+            fejünkben van, például az ilyen gondolatok, nagyon sokszor aktívan akadályozza azt, hogy egyáltalán
+            elkezdjünk a vágyainkon dolgozni.</p>
           <p><b>3. Ahelyett, hogy a vágyaink 10/10-es, igazi, teljes, 100%-os megvalósítására törekednénk -
               MEGÁLLAPODUNK FÉLMEGOLDÁSOKNÁL. 👇</b></p>
           <p>Mivel sokszor bennünk sincs egyetértés, hogy mit is szeretnénk, vagy hogy amit szeretnénk, elérhető-e >>>
@@ -193,21 +193,21 @@
           <p>Ezt most MESI.LIFE írja le, ő így gondolja, de mások igazából nem. 😀 Nem ezt látjuk az embereken, nem ez
             történik körülöttünk az életben, és a többség bizony nettó azt gondolja, hogy ez egyszerűen tényleg nincs
             így. Hogy pont ez az amerikai hazugság. A mese, amiből fel kell nőni.</p>
-          <p class="mb-0"> Szóval: igazából mi magunk is kételkedünk benne, hogy van-e 10/10. Ezért: nem igazán ezért
-            megyünk. Jó lesz az a 7/10 vagy 8/10 is! Na ez a NR. 1 OKA, hogy kiegyezünk a félmegoldásokkal a saját
+          <p class="mb-0"> Szóval: igazából mi magunk is kételkedünk benne, hogy van-e 10/10. Ezért: nem igazán ezt
+            keressük. Jó lesz az a 7/10 vagy 8/10 is! Na ez a NR. 1 OKA, hogy kiegyezünk a félmegoldásokkal a saját
             életünkben.</p>
         </div>
         <p>
           👇👇👇<br>
-          Ez van a fejünkben, így hozunk döntéseket - és egész pontosan ÍGY várjuk, hogy az életünk valahogy mégiscsak
-          király élmény legyen. Így már kevésbé meglepő az eredmény.
+          Ez van a fejünkben, így hozunk döntéseket - és egész pontosan ÍGY várjuk, hogy az életünk egyszercsak király
+          élmény legyen. Így már kevésbé meglepő az eredmény.
         </p>
 
 
         <h2>6. A BOLDOGSÁG-HELYZET EZ 👀</h2>
         <p>☝ <b>A boldogság koncepciójának célja van. HA van olyan víziója egy embernek, hogy az élete lehet egy király
             élmény, akkor ez lesz az ő iránytűje a döntéseinél.</b> Úgy fog választani minden helyzetben, hogy azt
-          keresi, merre lesz neki a lehető legjobb”. (Igazából mindenki ezt csinálja, aki nem akar sodródni vagy teljes
+          keresi, "merre lesz neki a lehető legjobb”. (Igazából mindenki ezt csinálja, aki nem akar sodródni vagy teljes
           elfogadásban áramlani.) Ez a “legjobb” lesz mindenkinek teljesen egyedi, helyzetről-helyzetre, DE mindenki
           abban fogja lemérni a sikert: hogy mennyire ad neki jó érzéseket a saját élete.</p>
         <p>Nyilvánvaló, hogy mindenki szeretné valóra váltani az álmait, vágyait, mégis csak keveseknek sikerül. Erről
@@ -241,9 +241,9 @@
         <p>Hogyha azt érzed, hogy eljött az ideje, hogy KITÖRJ a “viszonylag jól vagyok” szintjéről az életedben és
           elmozdulj a “szenvedélyesen jó” felé, ezeket a kérdéseket válaszold meg max őszinteséggel:</p>
         <ul class="divider gutter">
-          <li>- Ha 100%-ig biztosan tudnám, hogy minden vágyam képes leszek megvalósítani ebben az életben, akkor hol,
+          <li class="mb-3">- Ha 100%-ig biztosan tudnám, hogy minden vágyam képes leszek megvalósítani ebben az életben, akkor hol,
             milyen területen érezném most azt, hogy nincs meg a 10/10-es élményem?</li>
-          <li>- Hogyha 100%-ig biztos lehetnék benne, hogy létezik olyan, amire a szívem mélyén vágyom, akkor mire
+          <li class="mb-3">- Hogyha 100%-ig biztos lehetnék benne, hogy létezik olyan, amire a szívem mélyén vágyom, akkor mire
             vágynék MÉG az életembe?</li>
           <li>- Hogyha teljesen biztos volnék abban, hogy minden mentális gátat fel tudok oldani & minden szükséges
             képességet magamra tudok szedni hozzá útközben, HA eléggé akarom >> akkor MÉG milyen vágyakat akarnék
